feat(docker-compose): add volume to logstash csv files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+      - ./logstash/csv:/home/logstash/csv:ro,Z
     ports:
       - "5044:5044"
       - "5000:5000/tcp"
