feat(logstash): change path to file

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,7 @@
 input {
 	
   file {
-    path => "/home/daniel/Documentos/bd-trabalho/docker-elk/logstash/csv/20220101_Despesas_ItemEmpenhoHistorico.csv"
+    path => "/home/logstash/csv/20220101_Despesas_ItemEmpenhoHistorico.csv"
     start_position => "beginning"
     sincedb_path => "/dev/null"
   }
@@ -16,11 +16,11 @@ filter {
 
 output {
    elasticsearch {
-     hosts => "http://localhost:9200"
-     index => "demo-csv"
+			hosts => ["elasticsearch:9200"]
+			user => "elastic"
+   		password => "changeme"
+     	index => "csv-%{+YYYY.MM.dd}"
   }
 
-	stdout {
-
-	}
+	stdout {}
 }
