feat(logstash/elastic): logstash config and new queries

--- a/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
+++ b/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
@@ -15,9 +15,12 @@ filter {
   }
   mutate {
     convert => { "Matrícula" => "integer" }
-    convert => { "Proventos" => "long" }
-    convert => { "Descontos" => "long" }
-    convert => { "Liquido" => "long" }
+    convert => { "Proventos" => "float" }
+    convert => { "Descontos" => "float" }
+    convert => { "Liquido" => "float" }
+  }
+  date {
+    match => [ "Data Admissão", "YY/MM/dd HH:mm:ss" ]
   }
 }
 
