--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -9,15 +9,16 @@ input {
 
 filter {
   csv {
-		separator => ";"
-    columns => ["Nome", "Referência", "Matrícula", "Tipo de Folha", "Proventos", "Descontos", "Liquido", "Cargo",
-    "Vinculo", "Data Admissão", "Lotação"]
+		separator => ","
+    columns => ["Nome", "Referência", "Matrícula", "Tipo de Folha", "Proventos", "Descontos", "Liquido", "Cargo", "Vinculo","Data Admissão", "Lotação"]
   }
-  mutate {
-    convert => { "Matrícula" => "integer" }
-    convert => { "Proventos" => "long" }
-    convert => { "Descontos" => "long" }
-    convert => { "Liquido" => "long" }
+   mutate {
+    convert => { "Proventos" => "float" }
+    convert => { "Descontos" => "float" }
+    convert => { "Liquido" => "float" }
+  }
+  date {
+    match => ["Data Admissão", "MMM-dd-yyyy HH:mm:ss"]
   }
 }
 
