feat(elastic): add new queries

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -18,7 +18,8 @@ filter {
     convert => { "Liquido" => "float" }
   }
   date {
-    match => ["Data Admissão", "MMM-dd-yyyy HH:mm:ss"]
+    match => ["Data Admissão", "YYYY-MM-dd HH:mm:ss,SSS"]
+    target => "Data Admissão Timestamp"
   }
 }
 
