feat(logstash): add tce csv

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,7 @@
 input {
 	
   file {
-    path => "/home/logstash/csv/relatorio-folha-de-pagamento.csv"
+    path => "/home/logstash/csv/datasetifgtce.csv"
     start_position => "beginning"
     sincedb_path => "/dev/null"
   }
@@ -9,17 +9,8 @@ input {
 
 filter {
   csv {
-		separator => ","
-    columns => ["Nome", "Referência", "Matrícula", "Tipo de Folha", "Proventos", "Descontos", "Liquido", "Cargo", "Vinculo","Data Admissão", "Lotação"]
-  }
-   mutate {
-    convert => { "Proventos" => "float" }
-    convert => { "Descontos" => "float" }
-    convert => { "Liquido" => "float" }
-  }
-  date {
-    match => ["Data Admissão", "YYYY-MM-dd HH:mm:ss,SSS"]
-    target => "Data Admissão Timestamp"
+		separator => ";"
+    columns => ["nota_fiscal_data_emissao", "nota_fiscal_valor_total", "nota_fiscal_qtd_total_produtos"]
   }
 }
 
@@ -28,7 +19,7 @@ output {
 			hosts => ["elasticsearch:9200"]
 			user => "elastic"
    		password => "changeme"
-     	index => "relatorio-folha-pagamento-anapolis-maio-2022"
+     	index => "notas-fiscais-tce"
   }
 
 	stdout {}
