--- a/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
+++ b/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
@@ -18,7 +18,8 @@ filter {
     convert => { "Liquido" => "float" }
   }
   date {
-    match => ["Data Admissão", "MMM-dd-yyyy HH:mm:ss"]
+    match => ["Data Admissão", "YYYY-MM-dd HH:mm:ss,SSS"]
+    target => "Data Admissão Timestamp"
   }
 }
 
