--- a/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
+++ b/logstash/logstash-examples/logstash-relatorio-folha-pagamento.example
@@ -13,13 +13,10 @@ filter {
     columns => ["Nome", "Referência", "Matrícula", "Tipo de Folha", "Proventos", "Descontos", "Liquido", "Cargo", "Vinculo","Data Admissão", "Lotação"]
   }
    mutate {
-    convert => { "Proventos" => "float" }
-    convert => { "Descontos" => "float" }
-    convert => { "Liquido" => "float" }
-  }
-  date {
-    match => ["Data Admissão", "YYYY-MM-dd HH:mm:ss,SSS"]
-    target => "Data Admissão Timestamp"
+    convert => {"Matrícula" => "integer" }
+    convert => { "Proventos" => "integer" }
+    convert => { "Descontos" => "integer" }
+    convert => { "Liquido" => "integer" }
   }
 }
 
@@ -28,7 +25,7 @@ output {
 			hosts => ["elasticsearch:9200"]
 			user => "elastic"
    		password => "changeme"
-     	index => "relatorio-folha-pagamento-anapolis-maio-2022"
+     	index => "relatorio-folha-pagamento-anapolis-maio-2022-v2"
   }
 
 	stdout {}
