--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,7 @@
 input {
 	
   file {
-    path => "/home/logstash/csv/datasetifgtce.csv"
+    path => "/home/logstash/csv/relatorio-folha-de-pagamento.csv"
     start_position => "beginning"
     sincedb_path => "/dev/null"
   }
@@ -9,8 +9,14 @@ input {
 
 filter {
   csv {
-		separator => ";"
-    columns => ["nota_fiscal_data_emissao", "nota_fiscal_valor_total", "nota_fiscal_qtd_total_produtos"]
+		separator => ","
+    columns => ["Nome", "Referência", "Matrícula", "Tipo de Folha", "Proventos", "Descontos", "Liquido", "Cargo", "Vinculo","Data Admissão", "Lotação"]
+  }
+   mutate {
+    convert => {"Matrícula" => "integer" }
+    convert => { "Proventos" => "integer" }
+    convert => { "Descontos" => "integer" }
+    convert => { "Liquido" => "integer" }
   }
 }
 
@@ -19,7 +25,7 @@ output {
 			hosts => ["elasticsearch:9200"]
 			user => "elastic"
    		password => "changeme"
-     	index => "notas-fiscais-tce"
+     	index => "relatorio-folha-pagamento-anapolis-maio-2022-v2"
   }
 
 	stdout {}
